# DMS_Designer

./: .buildinfo  .gitignore  DMS_designer.html  README.md  env.yml  genindex.html  index.html  modules.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
DMS_designer/: __init__.py  library_analyzer.py  library_maker.py  setup.py
Generate_Figures/library_analysis/: OCA_T1_analysis.ipynb  create_POU_heatmaps.ipynb  merge_POU_libraries.ipynb  run_POU_QC.ipynb
Generate_Figures/library_analysis/examples/: library3_analysis.ipynb
Generate_Figures/library_analysis/library_count_data/: OCA_T1.xlsx  POU2F3_1.xlsx  POU2F3_2.xlsx  POU2F3_3.xlsx
Generate_Figures/library_analysis/testing/: 2023_01_22_BHM.ipynb
Generate_Figures/library_production/: library_generation.ipynb
Library_maker/: 23.09.27_NRF2_NEH3_lib_gen.ipynb  codon_usage.xlsx  env.yml  library_maker.py
_modules/: index.html
_modules/DMS_designer/: library_analyzer.html  library_maker.html
_sources/: index.rst.txt  notebooks.rst.txt
_sources/notebooks/: OCA_T1_analysis.ipynb.txt
docs/source/: DMS_designer.rst  conf.py  modules.rst
docs/source/notebooks/: create_POU_heatmaps.ipynb  library_generation.ipynb
library_analysis/: .gitignore  env.yml  library_analyzer.py
library_analysis/testing/: 2024_01_19_library_analysis.ipynb  testing.ipynb
notebooks/: OCA_T1_analysis.html  create_POU_heatmaps.html  library_generation.html  merge_POU_libraries.html  merge_POU_libraries.ipynb  run_POU_QC.html  run_POU_QC.ipynb
